name:              pure-convoker
version:           0.8.0.0
homepage:          purehs.org/doc/pure-convoker
author:            Sean Hickman
maintainer:        sean@grumply.com
license:           BSD3
license-file:      LICENSE
cabal-version:     >= 1.10
build-type:        Simple

source-repository head
  type: git
  location: https://github.com/grumply/pure-convoker.git

library
  hs-source-dirs:
      src

  build-depends:
      base
    , pure-auth
    , pure-bloom
    , pure-conjurer
    , pure-elm
    , pure-hooks
    , pure-json
    , pure-maybe
    , pure-render
    , pure-router
    , pure-sorcerer
    , pure-sync
    , pure-tagsoup
    , pure-txt
    , pure-websocket
    , pure-websocket-cache
    , pure-xss-sanitize
    , containers
    , hashable
    
  if !(impl(ghcjs))
    build-depends:
      pandoc

  exposed-modules:
    Pure.Convoker
    Pure.Convoker.Admins
    Pure.Convoker.Comment
    Pure.Convoker.Discussion
    Pure.Convoker.Meta
    Pure.Convoker.Mods
    Pure.Convoker.UserVotes
    Pure.Convoker.Discussion.Threaded
    Pure.Convoker.Discussion.Shared.Ago
    Pure.Convoker.Discussion.Shared.Markdown
    Pure.Convoker.Discussion.Shared.Total
    Pure.Convoker.Discussion.Threaded.Comment
    Pure.Convoker.Discussion.Threaded.Meta

  default-language: Haskell2010

  default-extensions:
    DerivingStrategies
    TypeFamilies
    FlexibleContexts
    UndecidableInstances
    DeriveGeneric
    DeriveAnyClass
    FlexibleInstances
    TemplateHaskell
    AllowAmbiguousTypes
    RankNTypes
    DataKinds
    PartialTypeSignatures
    TypeApplications
    ScopedTypeVariables
    DuplicateRecordFields
    StandaloneDeriving
    MultiParamTypeClasses
    NamedFieldPuns
    RecordWildCards
    PatternSynonyms
    BlockArguments
    LambdaCase
    CPP
    DerivingVia
    OverloadedStrings
    DefaultSignatures
    TypeOperators
    InstanceSigs
    ExistentialQuantification
    RoleAnnotations
    FunctionalDependencies
    ViewPatterns
    BangPatterns
    PolyKinds
    IncoherentInstances